fix: scrollbar flash

--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ html, body {
 
 body {
 	margin: auto;
-	padding: 2em;
+	padding: 10%;
 	padding-top: 3em;
+	padding-bottom: 1em;
 	max-width: 960px;
 	text-align: center;
 }
